# libwhale

./: AUTHORS  COPYING  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README  README.md  THANKS  aclocal.m4  config.h.in  configure  configure.ac  cross.sh  libwhale.pc.in  localbuild.sh  recompile.sh
config/: Makefile.am  Makefile.in  libwhale.conf.in
include/: Makefile.am  Makefile.in  otlv4.h  whale.h
include/rapidjson/: Makefile.am  Makefile.in
include/rapidjson/msinttypes/: stdint.h
include/rapidxml/: Makefile.am  Makefile.in  rapidxml_print.hpp  rapidxml_utils.hpp
include/whale/: Makefile.am  Makefile.in
include/whale/basic/: hbytearray.h  hdatetime.h  herror.h  hevent.h  heventpool.h  hlisthandler.h  hlog.h  hloopbuffer.h  hos.h  hplatform.h  hsharememory.h  hthread.h  hthreadpool.h  hthreadsafelist.h  hthreadsafepriorityqueue.h
include/whale/crypto/: haes.h  hbase64.h  hbcd.h  hcrc.h  hdes.h  hmd5.h  hrsa.h  hsha.h  hzip.h
include/whale/data/: hconnection.h  hmongo.h  hmongodataset.h  hmssql.h  hmssqldataset.h  hmysql.h  hmysqldataset.h  horacle.h  horacledataset.h  hpostgresql.h  hpostgresqldataset.h  hredis.h  hredisdataset.h  hsqlite.h  hsqlitedataset.h
include/whale/net/: hdns.h  hftpclient.h  hftpparser.h  hftpsocket.h  hftpstatus.h  hftptypes.h  hhttpclient.h  hhttpserver.h  hsocket.h  htcpclient.h  htcppacket.h  htcpserver.h
include/whale/util/: hdir.h  hfile.h  hjson.h  hoptions.h  hrandom.h  hsetting.h  hstring.h  huuid.h  hxml.h
m4/: ac_check_hiredis.m4  ac_check_libbson.m4  ac_check_libevent.m4  ac_check_libiconv.m4  ac_check_libpqxx.m4  ac_check_libz.m4  ac_check_mongoc.m4  ac_check_mysqlcppconn.m4  ac_check_ocilib.m4  ac_check_odbc.m4  ac_check_sqlite3.m4  ac_libwhale.m4
msvc/: libwhale.sln
msvc/libwhale/: libwhale.vcxproj  libwhale.vcxproj.filters
sample/: main.cpp
src/: Makefile.am  Makefile.in  haes.cpp  hbase64.cpp  hbcd.cpp  hconnection.cpp  hcrc.cpp  hdatetime.cpp  hdes.cpp  hdir.cpp  hdns.cpp  hfile.cpp  hftpclient.cpp  hftpparser.cpp  hftpsocket.cpp  hftpstatus.cpp  hftptypes.cpp  hhttpclient.cpp  hhttpserver.cpp  hjson.cpp  hlog.cpp  hloopbuffer.cpp  hmd5.cpp  hmongo.cpp  hmongodataset.cpp  hmssql.cpp  hmssqldataset.cpp  hmysql.cpp  hmysqldataset.cpp  hoptions.cpp  horacle.cpp  horacledataset.cpp  hos.cpp  hpostgresql.cpp  hpostgresqldataset.cpp  hrandom.cpp  hredis.cpp  hredisdataset.cpp  hrsa.cpp  hsetting.cpp  (+14 more)
test/day01/src/: test_ocilib.cpp
test/ftptest/src/: BlockingSocket.h  Definements.h  sample.cpp
