# Copyright (C) 2016 Liap <lianpingdevel@163.com>
#  
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without 
# modifications, as long as this notice is preserved.
# 
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

SUBDIRS=src include
ACLOCAL_AMFLAGS=-I m4
EXTRA_DIST = VERSION AUTHORS ChangeLog COPYING INSTALL NEWS README THANKS config doc sample msvc test
DISTCLEANFILES=libwhale.pc *~ \#*\#

pkgconfigdir=$(libdir)/pkgconfig
pkgconfig_DATA=libwhale.pc
